--- a/site/index.html
+++ b/site/index.html
@@ -42,29 +42,24 @@
 
     <div id="main-container" class="container">
 
-      <div class="container-fluid center-block">
-        <div class="text-center">
-          <div id="about-pane">
-            <div style="margin: -10px">
-              <div>We are two-men game development team full of ideas and ambitions! We are two-men game development team full of ideas and ambitions! We are two-men game development team full of ideas and ambitions! We are two-men game development team full of ideas and ambitions! We are two-men game development team full of ideas and ambitions! We are two-men game development team full of ideas and ambitions!</div>
-              <div id="test-div">
-            </div>
+      <div class="text-center">
+        <div id="about-pane">
+          <div style="margin: -10px">
+            <div>We are two-men game development team full of ideas and ambitions! We are two-men game development team full of ideas and ambitions! We are two-men game development team full of ideas and ambitions! We are two-men game development team full of ideas and ambitions! We are two-men game development team full of ideas and ambitions! We are two-men game development team full of ideas and ambitions!</div>
+            <div id="pinned-sign">
           </div>
         </div>
       </div>
 
-      <div>
-        <dir class="section-title-bg">
-          <dir class="section-title-text">Our Games</dir>          
-        </dir>
-      </div>
+      <div class="section-title-bg">
+        <img class="section-title" src="img/section-title-our-games.png"/>
+      </div> 
 
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <div class="thumb-holder text-center">
             <img class="thumb-image pixel-border-light" src="img/thumb-seven0.png" alt="...">
-              <img class="thumb-icon pixel-border" src="img/icon-seven.png"></img>
-            </img>
+              <img class="thumb-icon pixel-border" src="img/icon-seven.png">
             <h3 class="thumb-title">Seven: Drinking Game</h3>
             <p class="thumb-desc text-center">Drinking game that will make you lauf and drunk as fuck</p>
             <h4>Avaialble now on:</p>
@@ -81,8 +76,7 @@
         <div class="col-sm-12 col-md-6">
           <div class="thumb-holder text-center">
             <img class="thumb-image pixel-border-light" src="img/test-preview.png" alt="...">
-              <img class="thumb-icon pixel-border" src="img/icon-getreact.png"></img>
-            </img>
+              <img class="thumb-icon pixel-border" src="img/icon-getreact.png"/>
             <h3 class="thumb-title">Get React</h3>
             <p class="thumb-desc text-center">Procedural generated hardcore arcade in old fashion style</p>
             <h4>Avaialble now on:</p>
