--- a/site/index.html
+++ b/site/index.html
@@ -91,12 +91,12 @@
             <div class="thumb-links-pane">				
 				<p class="thumb-available-text">Avaialble now on:</p>
 				<div style="display: inline-block">
-				  <a href="#" target="_blank"
-					 class="btn-app-link btn-web"></a>
-				  <a href="#" target="_blank" 
-					 class="btn-app-link btn-appstore"></a>
-				  <a href="#" target="_blank" 
-					 class="btn-app-link btn-android"></a>  
+				  <a class="btn-app-link btn-web" target="_blank"
+					 href="http://crashinvaders.com/getreact"></a>
+				  <a class="btn-app-link btn-appstore" target="_blank"
+					 href="https://itunes.apple.com/app/id1075864120"></a>
+				  <a class="btn-app-link btn-android" target="_blank"
+					 href="https://play.google.com/store/apps/details?id=com.crashinvaders.magnetter.android"></a>  
 				</div>
 		    </div>
           </div>
@@ -120,9 +120,9 @@
             <div class="thumb-links-pane">				
 				<p class="thumb-available-text">Avaialble now on:</p>
 				<div style="display: inline-block">
-				  <a href="#" target="_blank" 
+				  <a href="https://itunes.apple.com/app/id1097472871" target="_blank" 
 					 class="btn-app-link btn-appstore"></a>
-				  <a href="#" target="_blank" 
+				  <a href="https://play.google.com/store/apps/details?id=com.crashinvaders.seven" target="_blank" 
 					 class="btn-app-link btn-android"></a>              
 				  <!-- Example of inactive link -->
 				  <!-- <a href="#" class="btn-app-link btn-appstore inactive-link">
