Render filter fixes and code clean

--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="favicon.ico">
+	<link rel="shortcut icon" href="favicon.png" type="image/png">
 
     <title>Crashinvaders</title>
 
@@ -62,28 +63,20 @@
 		<div id="section-title-our-games" class="section-title-text"></div>
 	  	<img class="section-badge" src="img/section-badge-games.png"/>
       </div> 
-		
-<!--
-	<div id="cycler" style="overflow: hidden; width: 300px; height: 200px;">
-		<img class="active" src="img/thumb-getreact0.png" />
-		<img src="img/thumb-getreact1.png" />	
-	</div>
--->
 
       <div class="row" style="display: inline-block">
 		  		  
         <div class="col-sm-12 col-md-6 thumb-cell">
           <div class="thumb-holder">			  
 			<div class="thumb-image-container">
-				<div class="cycler" style="width: 100%; height: 100%; overflow: hidden;">
-					<img class="active thumb-image" src="img/thumb-getreact0.png" />
-					<img class="thumb-image" src="img/thumb-getreact1.png" />	
-					<img class="thumb-image" src="img/thumb-getreact2.png" />	
-					<img class="thumb-image" src="img/thumb-getreact3.png" />	
-					<img class="thumb-image" src="img/thumb-getreact4.png" />	
-					<img class="thumb-image" src="img/thumb-getreact5.png" />	
-				</div>
-<!--		      <img class="thumb-image" src="img/thumb-getreact0.png" alt="..."/>-->
+			  <div class="cycler" style="width: 100%; height: 100%; overflow: hidden;">
+				<img class="active thumb-image" src="img/thumb-getreact0.png" />
+				<img class="thumb-image" src="img/thumb-getreact1.png" />	
+				<img class="thumb-image" src="img/thumb-getreact2.png" />	
+				<img class="thumb-image" src="img/thumb-getreact3.png" />	
+				<img class="thumb-image" src="img/thumb-getreact4.png" />	
+				<img class="thumb-image" src="img/thumb-getreact5.png" />	
+			  </div>
               <img class="thumb-icon" src="img/icon-getreact.png"/>
 			</div>
             <p class="thumb-title">Get React</p>
@@ -105,14 +98,13 @@
         <div class="col-sm-12 col-md-6 thumb-cell">
           <div class="thumb-holder">			  
 			<div class="thumb-image-container">
-				<div class="cycler" style="width: 100%; height: 100%; overflow: hidden;">
-					<img class="active thumb-image" src="img/thumb-seven0.png" />
-					<img class="thumb-image" src="img/thumb-seven1.png" />
-					<img class="thumb-image" src="img/thumb-seven2.png" />
-					<img class="thumb-image" src="img/thumb-seven3.png" />
-				</div>
-<!--		      <img class="thumb-image" src="img/thumb-seven0.png" alt="..."/>-->
-              <img class="thumb-icon" src="img/icon-seven.png"/>
+			  <div class="cycler" style="width: 100%; height: 100%; overflow: hidden;">
+				<img class="active thumb-image" src="img/thumb-seven0.png" />
+				<img class="thumb-image" src="img/thumb-seven1.png" />
+				<img class="thumb-image" src="img/thumb-seven2.png" />
+				<img class="thumb-image" src="img/thumb-seven3.png" />
+			  </div>
+              <img class="thumb-icon smooth-render" src="img/icon-seven.png"/>
 			</div>
             <p class="thumb-title">Seven</p>
 <!--            <p class="thumb-subtitle">Drinking Game</p>-->
@@ -139,7 +131,7 @@
 	  <div id="grounding-left"></div>
 	  <div id="grounding-right"></div>
 	  <a id="face-miha" href="https://vk.com/theface"></a>
-	  <a id="face-antoha"  href="https://vk.com/mtphr"></a>
+	  <a id="face-antoha" href="https://vk.com/mtphr"></a>
 
 	<!-- .container -->
     </div>
