--- a/site/index.html
+++ b/site/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Crashinvaders Official Site">
+    <meta name="author" content="Metaphore">
     <link rel="icon" href="favicon.ico">
 	<link rel="shortcut icon" href="favicon.png" type="image/png">
 
@@ -24,17 +24,7 @@
     <script type="text/javascript" src="js/jquery-1.12.3.min.js"></script>
     <script type="text/javascript" src="js/image-cycler.js"></script>
     <script type="text/javascript" src="js/responsive-content.js"></script>
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <!-- <script src="../../assets/js/ie-emulation-modes-warning.js"></script> -->
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	  
   </head>
 
   <body>
@@ -130,8 +120,13 @@
 		
 	  <div id="grounding-left"></div>
 	  <div id="grounding-right"></div>
-	  <a id="face-miha" href="https://vk.com/theface"></a>
-	  <a id="face-antoha" href="https://vk.com/mtphr"></a>
+		
+	  <div>
+	    <div id="face-holder">
+	      <input id="face-miha" type="image" src="/img/face-miha.png" onclick="window.open('https://vk.com/theface')" oncontextmenu="return false;"/>
+		  <input id="face-antoha" type="image" src="img/face-antoha.png"   onclick="window.open('https://vk.com/mtphr')" oncontextmenu="return false;"/>
+	    </div>
+	  </div>
 
 	<!-- .container -->
     </div>
