--- a/site/index.html
+++ b/site/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	  
     <meta name="description" content="Crashinvaders Official Site">
     <meta name="author" content="Metaphore">
     <link rel="icon" href="favicon.ico">
