Trashvile icon fixed

--- a/site/index.html
+++ b/site/index.html
@@ -44,7 +44,7 @@
           <div class="about-text">
             <p>Hey there stranger!</p>
 			  <p class="text-justify">We are two-men game development team full of ideas and ambitions.</p>				
-			  <p class="text-justify">Since 2012 we are working on our own projects, take some freelance orders and always open for interesting offers. Regardless of your purpose, we glad you have came. Feel free to contact us by any question (we would love to talk ;)</p>			  
+			  <p class="text-justify">Since 2012 we've been working on our own projects, take some freelance orders and always open for interesting offers. Regardless of your purpose, we glad you've came. Feel free to contact us by any question (we would love to talk ;)</p>			  
 <!--			<p>Our favorite framework is <a target="_blank" href="https://libgdx.badlogicgames.com" style="color: #cc4444; background-color: #f1e3d6; padding: 2px 2px 0px 4px;"><span style="color: #444">lib</span>GDX</a> and we totaly in love with it.</p>-->			  
 			<p class="text-right" style="margin-top: 16px">Yours Sincerely,<br/>Crashs</p>
         </div>
@@ -121,7 +121,7 @@
       </div> 		
 
       <div class="section-title-bg">
-		<div id="section-title-other-projects" class="section-title-text">Experiments and other</div>
+		<div id="section-title-experiments" class="section-title-text">Experiments and other</div>
 	  	<img class="section-badge" src="img/section-badge-experiments.png"/>
       </div> 
 		
