The Last Pals added; Image optimization

--- a/site/index.html
+++ b/site/index.html
@@ -149,6 +149,29 @@
 		    </div>
           </div>
         </div>
+		  		  
+        <div class="col-sm-12 col-md-6 thumb-cell">
+          <div class="thumb-holder">			  
+			<div class="thumb-image-container">
+			  <div class="cycler" style="width: 100%; height: 100%; overflow: hidden;">
+				<img class="active thumb-image" src="img/thumb-thelastpals0.png" />
+				<img class="thumb-image" src="img/thumb-thelastpals1.png" />	
+				<img class="thumb-image" src="img/thumb-thelastpals2.png" />	
+				<img class="thumb-image" src="img/thumb-thelastpals3.png" />	
+			  </div>
+              <img class="thumb-icon" src="img/icon-thelastpals.png"/>
+			</div>
+            <p class="thumb-title">The Last Pals</p>
+            <p class="thumb-desc text-center">Gather your party smart and beat opponent</p>
+            <div class="thumb-links-pane">				
+				<p class="thumb-available-text">Play it now on</p>
+				<div style="display: inline-block">
+				  <a class="btn-app-link btn-web" target="_blank"
+					 href="http://crashinvaders.com/thelastpals"></a>				  
+				</div>
+		    </div>
+          </div>
+        </div>
 		  
 		<!-- Grid -->
       </div> 	
