--- a/site/index.html
+++ b/site/index.html
@@ -162,7 +162,7 @@
               <img class="thumb-icon" src="img/icon-thelastpals.png"/>
 			</div>
             <p class="thumb-title">The Last Pals</p>
-            <p class="thumb-desc text-center">Gather your party smart and beat opponent</p>
+            <p class="thumb-desc text-center">Gather your party wise and beat an opponent</p>
             <div class="thumb-links-pane">				
 				<p class="thumb-available-text">Play it now on</p>
 				<div style="display: inline-block">
