Get React ios link unlinked

--- a/site/index.html
+++ b/site/index.html
@@ -75,10 +75,8 @@
             <div class="thumb-links-pane">				
 				<p class="thumb-available-text">Avaialble now on:</p>
 				<div style="display: inline-block">
-				  <a class="btn-app-link btn-appstore inactive-link" target="_blank"
-					 href="https://itunes.apple.com/app/id1075864120">
-					<img class="soon-badge" src="img/soon-badge.png"/>
-				  </a>
+				  <a class="btn-app-link btn-appstore" target="_blank"
+                     href="https://itunes.apple.com/app/id1075864120"></a>
 				  <a class="btn-app-link btn-android" target="_blank"
 					 href="https://play.google.com/store/apps/details?id=com.crashinvaders.magnetter.android"></a>  
 				  <a class="btn-app-link btn-web" target="_blank"
