--- a/site/index.html
+++ b/site/index.html
@@ -136,7 +136,9 @@
           </div>
         </div>
 		  
-      </div> <div class="section-title-bg">
+      </div> 
+		
+	  <div class="section-title-bg">
 		<div id="section-title-commercial" class="section-title-text"></div>
 	  	<img class="section-badge" src="img/section-badge-commercial.png"/>
       </div> 
