Petool links updated; Minor visual improvements

--- a/site/index.html
+++ b/site/index.html
@@ -72,9 +72,20 @@
 			</div>
             <p class="thumb-title">Jolly Dog</p>
             <p class="thumb-desc text-center">Simple yet beatiful game for your beloved pet</p>
+			  <div class="thumb-links-pane">				
+				<p class="thumb-available-text">Avaialble now on:</p>
+				<div style="display: inline-block">
+				  <a href="#" class="btn-app-link btn-appstore inactive-link">
+					<img class="soon-badge" src="img/soon-badge.png"/></a> 
+				  <a class="btn-app-link btn-android" target="_blank"
+                     href="https://play.google.com/store/apps/details?id=com.crashinvaders.jollydog"></a>
+				</div>
+		    </div>
+<!--		Example of "Avaialble soon" placeholder
             <div class="thumb-links-pane" style="background-color: #abd5d6">				
 				<p class="thumb-available-text" style="color: #527583">Avaialble soon...</p>
 		    </div>
+-->
           </div>
         </div>
 		  		  
