Itunes link for Jolly Dog; Minor layout improvements

--- a/site/index.html
+++ b/site/index.html
@@ -75,8 +75,8 @@
 			  <div class="thumb-links-pane">				
 				<p class="thumb-available-text">Avaialble now on:</p>
 				<div style="display: inline-block">
-				  <a href="#" class="btn-app-link btn-appstore inactive-link">
-					<img class="soon-badge" src="img/soon-badge.png"/></a> 
+				  <a class="btn-app-link btn-appstore" target="_blank"
+                     href="https://itunes.apple.com/app/id1153421262"></a>
 				  <a class="btn-app-link btn-android" target="_blank"
                      href="https://play.google.com/store/apps/details?id=com.crashinvaders.jollydog"></a>
 				</div>
