Copyright date updated; Icarus Play Store link added

--- a/site/index.html
+++ b/site/index.html
@@ -172,9 +172,11 @@
 				<p class="thumb-available-text">Avaialble now on:</p>
 				<div style="display: inline-block">
 				  <a class="btn-app-link btn-appstore" target="_blank"
-                     href="https://itunes.apple.com/app/id1110277287"></a>
-				  <a href="#" class="btn-app-link btn-android inactive-link">
-					<img class="soon-badge" src="img/soon-badge.png"/></a> 
+                     href="https://itunes.apple.com/app/id1110277287"></a>                     
+				  <a class="btn-app-link btn-android" target="_blank"
+                     href="https://play.google.com/store/apps/details?id=com.ithacanmedia.icarusflight"></a>
+				  <!-- <a href="#" class="btn-app-link btn-android inactive-link">
+					<img class="soon-badge" src="img/soon-badge.png"/></a>  -->
 				</div>
 		    </div>
           </div>
@@ -254,7 +256,7 @@
 
     <footer id="footer-frame" class="footer">
       <div class="container-fluid">
-        <p id="credits-text" class="text-center">© 2012-2016 Crashinvaders</p>
+        <p id="credits-text" class="text-center">© 2012-2017 Crashinvaders</p>
         <div class="text-center" style="margin: auto;">
           <div style="display: inline-block; margin-bottom: -5px">
             <a href="mailto:contact@crashinvaders.com" target="_blank"
