Miha's face back in business; Available typos fixed

--- a/site/index.html
+++ b/site/index.html
@@ -73,7 +73,7 @@
             <p class="thumb-title">Jolly Dog</p>
             <p class="thumb-desc text-center">Simple yet beatiful game for your beloved pet</p>
 			  <div class="thumb-links-pane">				
-				<p class="thumb-available-text">Avaialble now on:</p>
+				<p class="thumb-available-text">Available now on:</p>
 				<div style="display: inline-block">
 				  <a class="btn-app-link btn-appstore" target="_blank"
                      href="https://itunes.apple.com/app/id1153421262"></a>
@@ -81,9 +81,9 @@
                      href="https://play.google.com/store/apps/details?id=com.crashinvaders.jollydog"></a>
 				</div>
 		    </div>
-<!--		Example of "Avaialble soon" placeholder
+<!--		Example of "Available soon" placeholder
             <div class="thumb-links-pane" style="background-color: #abd5d6">				
-				<p class="thumb-available-text" style="color: #527583">Avaialble soon...</p>
+				<p class="thumb-available-text" style="color: #527583">Available soon...</p>
 		    </div>
 -->
           </div>
@@ -105,7 +105,7 @@
             <p class="thumb-title">Get React</p>
             <p class="thumb-desc text-center">Hardcore procedural arcade in old fashion style</p>
             <div class="thumb-links-pane">				
-				<p class="thumb-available-text">Avaialble now on:</p>
+				<p class="thumb-available-text">Available now on:</p>
 				<div style="display: inline-block">
 				  <a class="btn-app-link btn-appstore" target="_blank"
                      href="https://itunes.apple.com/app/id1075864120"></a>
@@ -132,7 +132,7 @@
             <p class="thumb-title">Seven</p>
             <p class="thumb-desc text-center">One of the most popular drinking games across the mobile market </p>
             <div class="thumb-links-pane">				
-				<p class="thumb-available-text">Avaialble now on:</p>
+				<p class="thumb-available-text">Available now on:</p>
 				<div style="display: inline-block">
 				  <a href="https://itunes.apple.com/app/id1097472871" target="_blank" 
 					 class="btn-app-link btn-appstore"></a>
@@ -169,7 +169,7 @@
             <p class="thumb-title" style="font-size: 24px; margin-bottom: 6px;">Flying With Icarus</p>
             <p class="thumb-desc text-center">Arcade for kids with mix of greek mythology and all the things</p>
             <div class="thumb-links-pane">				
-				<p class="thumb-available-text">Avaialble now on:</p>
+				<p class="thumb-available-text">Available now on:</p>
 				<div style="display: inline-block">
 				  <a class="btn-app-link btn-appstore" target="_blank"
                      href="https://itunes.apple.com/app/id1110277287"></a>                     
@@ -245,7 +245,7 @@
 		
 	  <div>
 	    <div id="face-holder">
-	      <input id="face-miha" type="image" src="/img/face-miha.png" onclick="window.open('https://vk.com/theface')" oncontextmenu="return false;"/>
+	      <input id="face-miha" type="image" src="img/face-miha.png" onclick="window.open('https://vk.com/theface')" oncontextmenu="return false;"/>
 		  <input id="face-antoha" type="image" src="img/face-antoha.png"   onclick="window.open('https://vk.com/mtphr')" oncontextmenu="return false;"/>
 	    </div>
 	  </div>
