Get react -> dash react

--- a/site/index.html
+++ b/site/index.html
@@ -71,7 +71,7 @@
 			  </div>
               <img class="thumb-icon" src="img/icon-getreact.png"/>
 			</div>
-            <p class="thumb-title">Get React</p>
+            <p class="thumb-title">Dash React</p>
             <p class="thumb-desc text-center">Hardcore procedural arcade in old fashion style</p>
             <div class="thumb-links-pane">				
 				<p class="thumb-available-text">Release soon:</p>
